# cute_bevy_game

./: .aider.chat.history.md  .aider.input.history  Cargo.toml  bevy_docs.md  index.html
.aider.tags.cache.v3/: cache.db  cache.db-shm  cache.db-wal
.github/workflows/: static.yml
pkg/: ball_drop_rust.d.ts  ball_drop_rust.js  ball_drop_rust_bg.wasm.d.ts  package.json
src/: lib.rs  main.rs
